Add remaining basic CRUD for lobbies
